# lgp-iot-db

./: .env  Cargo.toml  README.md
examples/: adxl.rs  humiture-taosd.rs  humiture.rs  taosd-test.rs
migrations/2022-10-14-022039_create_adxl/: down.sql  up.sql
migrations/2023-03-11-000732_create-humidity/: down.sql  up.sql
src/: errors.rs  lib.rs  postgres.rs  schema.rs
src/models/: adxl_data_v2.rs  adxl_datas.rs  humiture_data_v2.rs  humiture_datas.rs  mod.rs
tests/: adxl.rs  humiture.rs  test.rs
