[package]
name = "logicpi_iot_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10.0"
serial = "0.4"
rand = "0.8"
crc = "3.0.0"
chrono = {version="0.4.24", features = ["serde"]}
r2d2 = "0.8.10"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
