[package]
name = "lgp-iot-db"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10.0"
serial = "0.4"
rand = "0.8.5"
crc = "3.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
r2d2 = "0.8.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
hex = "0.4.3"
bincode = "1.3.3"
pretty_env_logger = "0.5.0"
taos = "0.10.13"
anyhow = { version = "1.0.75", features = ["backtrace"] }
